Experimenting with direction1 style css

--- a/index.html
+++ b/index.html
@@ -3,18 +3,64 @@
 	<head>
 		<title>Project 3-Binding</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="reset.css" rel="stylesheet">
+
+		<link href="assets/reset.css" rel="stylesheet">
+		<link href="assets/common.css" rel="stylesheet">
+
+		<!-- three styling directions -->
+		<link href="assets/direction1.css" rel="stylesheet">
+		<!-- <link href="assets/direction2.css" rel="stylesheet">
+		<link href="assets/direction3.css" rel="stylesheet"> -->
 	</head>
 
 	<body>
-		<header>
-		</header>
-		<article>
-			<section>
-			</section>
-		</article>
-		<footer>
+		<!-- mobile-navbar -->
+		 <nav>
+			<div class="margin" id="mobile-navbar">
+				<ol>
+					<li> <a href="index.html">Home</a></li>
+					<li class="class-name" > Reading list</li>
+					<li class="class-name" > Typo & Interaction</li>
+					<li class="scroll-to-top"><a href="top">Top</a></li>
+				</ol>
+			</div>
+		
+			<!-- desktop-navbar -->
+			<!-- <div class="margin" id="desktop-navbar">
+				<ol class="desktop-margin">
+					<li> <a href="index.html">Home</a> </li>
+					<li><a href="article-1.html">Reading lists</a>
+					<li class="hero-heading">Typography & Interaction <br> Fall 24</a></li>
+					<li class="scroll-to-top"><a href="top">Top</a></li> -->
+				</ol>
+			</div>
+		 </nav>
 
+		<header>
+		
+		<main class="margin" id="home">
+			<ol class="margin-2">
+				<li id="article-1">
+					<!-- <h2>01</h2> -->
+					<h3 class="article-title"><a href="article-1.html">Hooked on a Feeling </a></h2>
+					<p class="author">Michael Roack</p>
+				</li>
+
+				<li id="article-2"></li>
+					<!-- <h2>02</h2> -->
+					<h3 class="article-title"><a href="article-2.html">This is Auto-tune Typography </a></h2>
+					<p class="author">Silvia Sfligiotti</p>
+				</li>
+
+				<li id="article-3"></li>
+					<!-- <h2>01</h2> -->
+					<h3 class="article-title"><a href="article-2.html">Third article </a></h2>
+				<p class="author">Third author</p>
+				</li>
+
+			</ol>
+
+		<footer>
 		</footer>
 	</body>
 </html>
