--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="assets/common.css" rel="stylesheet">
 
 		<!-- three styling directions -->
+		<link rel="stylesheet" href="binding.css" />
 		<link href="assets/direction1.css" rel="stylesheet">
 		<!-- <link href="assets/direction2.css" rel="stylesheet">
 		<link href="assets/direction3.css" rel="stylesheet"> -->
