--- a/Pages/index.html
+++ b/Pages/index.html
@@ -9,7 +9,7 @@
 
 		<!-- three styling directions -->
 		<link rel="stylesheet" href="binding.css" />
-		<link href="assets/direction1.css" rel="stylesheet">
+		<link href="/direction1.css" rel="stylesheet">
 		<!-- <link href="assets/direction2.css" rel="stylesheet">
 		<link href="assets/direction3.css" rel="stylesheet"> -->
 	</head>
