--- a/index.html
+++ b/index.html
@@ -8,33 +8,62 @@
 		<link href="Stylesheets/common.css" rel="stylesheet">
 
 		<!-- three styling directions -->
-		<link href="Stylesheets/direction1.css" rel="stylesheet">
-		<!-- <link href="Stylesheets/direction2.css" rel="stylesheet">
-		<link href="Stylesheets/direction3.css" rel="stylesheet"> -->
+		<!-- <link href="Stylesheets/direction1.css" rel="stylesheet"> -->
+		<link href="Stylesheets/direction2.css" rel="stylesheet">
+		<!-- <link href="Stylesheets/direction3.css" rel="stylesheet">  -->
 	</head>
 
 	<body>
+		<header>
+			<nav class="nav">
+				<span class="class-name"><a href="top">PMCD 5002</a></span>
+				<span class="project">Project 3</span>
+				<span class="my-name">Vee Mai</span>
+			</nav>
+		</header>
+		
+		<main class="grid">
+			<div class="padding flex">
+				<h1 id="top"> Binding</h1>
+					<div class="space"></div>
+					<div class="max-width">
+						<h3 class="padding-intro">About this project</h3>
+						<p class="intro"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					</div>
+			</div>
+		</main>
+	
+
+		<footer>
+			<p>Designed by Vee Mai</p>
+		</footer>
+	</body>
+</html>			
+
+
+<!-- [HTML FOR DIRECTION 1 - Dropdown menu nav, please use direction-1 css]  --> 
+	<!-- <body>
 		<!-- mobile-navbar -->
-		 <nav>
+		 <!-- <nav>
 			<div class="left-nav">
 				<a href="index.html">Home</a>
-			</div>
+			</div> --> -->
 
-			<div class="right-nav">
-				<div class="dropdown">
-					<input type="checkbox" id="dropdown-check">
-					<label class="dropdown-button" for="dropdown-check">Chapters</label>
-					<div class="dropdown-content>">
-						<a href="article-1.html" >Hooked on a Feeling</a>
-						<a href="article-2.html" >This is AUTO-TUNE Typography</a>
-						<a href="article-3.html" >Hooked on a Feeling</a>
-					</div>
-				</div>
-			</div>
-		</nav>
+
+			<!-- <ul class="right-nav">
+				<li><a href="index.html">Readings list</a>
+					<ul>
+						<li><a href="article-1.html" >Hooked on a Feeling</a></li>
+						<li><a href="article-2.html" >This is AUTO-TUNE Typography</a></li>
+						<li><a href="article-3.html" >Third-article</a></li>
+					</ul>
+				</li>
+			</ul> -->
+	
+		<!-- </nav>
 
 		<header>
-			<h1>TITLE OF MY BOOK </h1>
+			<h1>Binding</h1>
 			<p class="intro"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</header>
 		
@@ -54,9 +83,9 @@
 						<h2 class="article-title"><a href="article-2.html">This is Auto-tune Typography</h2></a>
 						<p class="author">Silvia Sfligiotti, 2022</p>
 					</div>
-				</li>
+				</li> -->
 
-				<li class="card-3">
+				<!-- <li class="card-3">
 					<a href="article-3.html"></a>
 					<div class="card-content">
 						<h2>Third article</h2>
@@ -71,4 +100,17 @@
 			<p>Designed by Vee Mai</p>
 		</footer>
 	</body>
-</html>
+</html>			 -->
+
+
+<!-- history -->
+<!-- <div class="dropdown">
+					<!-- <input type="checkbox" id="dropdown-check">
+					<label class="dropdown-button" for="dropdown-check">Chapters</label>
+					<div class="dropdown-content>"> -->
+						<!-- <a href="article-1.html" >Hooked on a Feeling</a>
+						<a href="article-2.html" >This is AUTO-TUNE Typography</a>
+						<a href="article-3.html" >Hooked on a Feeling</a>
+					</div>
+				</div> -->
+			<!-- </div> --> -->
