added css to article-2

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<link href="Stylesheets/common.css" rel="stylesheet">
 
 		<!-- three styling directions -->
-		<!-- <link href="Stylesheets/direction1.css" rel="stylesheet"> -->
-		<link href="Stylesheets/direction2.css" rel="stylesheet">
+		<link href="Stylesheets/direction1.css" rel="stylesheet">
+		<!-- <link href="Stylesheets/direction2.css" rel="stylesheet"> -->
 		<!-- <link href="Stylesheets/direction3.css" rel="stylesheet">  -->
 	</head>
-
+<!-- 
 	<body>
 		<header>
 			<nav class="nav">
@@ -38,19 +38,19 @@
 			<p>Designed by Vee Mai</p>
 		</footer>
 	</body>
-</html>			
+</html>			 -->
 
 
-<!-- [HTML FOR DIRECTION 1 - Dropdown menu nav, please use direction-1 css]  --> 
-	<!-- <body>
+<!-- [HTML FOR DIRECTION 1 - Dropdown menu nav, please use direction-1 css]  -->  -->
+	<body>
 		<!-- mobile-navbar -->
-		 <!-- <nav>
+		 <nav> 
 			<div class="left-nav">
 				<a href="index.html">Home</a>
-			</div> --> -->
+			</div>
 
 
-			<!-- <ul class="right-nav">
+	<ul class="right-nav"> 
 				<li><a href="index.html">Readings list</a>
 					<ul>
 						<li><a href="article-1.html" >Hooked on a Feeling</a></li>
@@ -58,9 +58,9 @@
 						<li><a href="article-3.html" >Third-article</a></li>
 					</ul>
 				</li>
-			</ul> -->
+			</ul> 
 	
-		<!-- </nav>
+		</nav>
 
 		<header>
 			<h1>Binding</h1>
@@ -72,7 +72,7 @@
 			<ol class="cards">
 				<li class="card-1">
 					<div class="card-content">
-						<a href="article-1.html"> <h2>Hooked on a Feeling</h2></a>
+						<a href="../pages/article-1.html"> <h2>Hooked on a Feeling</h2></a>
 						<p class="author"> Michael Rock, 2011</p>
 					</div>
 				</li>
@@ -80,12 +80,12 @@
 				<li class="card-2">
 					<a href="article-2.html"></a>
 					<div class="card-content">
-						<h2 class="article-title"><a href="article-2.html">This is Auto-tune Typography</h2></a>
+						<a href="../pages/article-2.html"><h2 class="article-title">This is Auto-tune Typography</h2></a>
 						<p class="author">Silvia Sfligiotti, 2022</p>
 					</div>
-				</li> -->
+				</li>
 
-				<!-- <li class="card-3">
+			 <li class="card-3">
 					<a href="article-3.html"></a>
 					<div class="card-content">
 						<h2>Third article</h2>
@@ -93,14 +93,14 @@
 					</div>
 				</li>
 			</ol>
-		</section>
+		</section> 
 		</main>
 
 		<footer>
 			<p>Designed by Vee Mai</p>
 		</footer>
 	</body>
-</html>			 -->
+</html>	
 
 
 <!-- history -->
