added styles to article 02

--- a/index.html
+++ b/index.html
@@ -6,95 +6,85 @@
 
 		<link href="Stylesheets/reset.css" rel="stylesheet">
 		<link href="Stylesheets/common.css" rel="stylesheet">
-
-		<!-- three styling directions -->
-		<link href="Stylesheets/direction1.css" rel="stylesheet">
-		<!-- <link href="Stylesheets/direction2.css" rel="stylesheet"> -->
-		<!-- <link href="Stylesheets/direction3.css" rel="stylesheet">  -->
+		<link href="Stylesheets/homepage.css" rel="stylesheet">
 	</head>
-<!-- 
+
+<!-- [Landing page]  --> 
 	<body>
-		<header>
-			<nav class="nav">
-				<span class="class-name"><a href="top">PMCD 5002</a></span>
-				<span class="project">Project 3</span>
-				<span class="my-name">Vee Mai</span>
-			</nav>
-		</header>
-		
-		<main class="grid">
-			<div class="padding flex">
-				<h1 id="top"> Binding</h1>
-					<div class="space"></div>
-					<div class="max-width">
-						<h3 class="padding-intro">About this project</h3>
-						<p class="intro"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					</div>
-			</div>
-		</main>
-	
-
-		<footer>
-			<p>Designed by Vee Mai</p>
-		</footer>
-	</body>
-</html>			 -->
-
-
-<!-- [HTML FOR DIRECTION 1 - Dropdown menu nav, please use direction-1 css]  -->  -->
-	<body>
-		<!-- mobile-navbar -->
+		<!-- navbar -->
 		 <nav> 
 			<div class="left-nav">
 				<a href="index.html">Home</a>
 			</div>
 
-
-	<ul class="right-nav"> 
-				<li><a href="index.html">Readings list</a>
+			<ul class="right-nav"> 
+				<li>Readings list
 					<ul>
-						<li><a href="article-1.html" >Hooked on a Feeling</a></li>
-						<li><a href="article-2.html" >This is AUTO-TUNE Typography</a></li>
-						<li><a href="article-3.html" >Third-article</a></li>
+						<li><a href="../pages/article-1.html" >Article 01</a></li>
+						<li><a href="../pages/article-2.html" >Article 02</a></li>
+						<li><a href="../pages/article-3.html" >Article 03</a></li>
 					</ul>
 				</li>
 			</ul> 
-	
 		</nav>
 
 		<header>
 			<h1>Binding</h1>
-			<p class="intro"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			<p class="intro"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
 		</header>
 		
 		<main>
 		<section>
-			<ol class="cards">
-				<li class="card-1">
-					<div class="card-content">
-						<a href="../pages/article-1.html"> <h2>Hooked on a Feeling</h2></a>
-						<p class="author"> Michael Rock, 2011</p>
-					</div>
-				</li>
+			<ol class="cardlink-container">
+				<a href="../pages/article-1.html"> 
+					<li class="cardlink">
+						<div class="cardlink-item1">
+							<h2>01</h2>
+						</div>
+						<div class="cardlink-item2">
+							<h2>Hooked on a Feeling</h2>
+						</div>
+						<div>
+							<p>Michael Rock</p>
+						</div>
+					</li>
+				</a>
 
-				<li class="card-2">
-					<a href="article-2.html"></a>
-					<div class="card-content">
-						<a href="../pages/article-2.html"><h2 class="article-title">This is Auto-tune Typography</h2></a>
-						<p class="author">Silvia Sfligiotti, 2022</p>
-					</div>
-				</li>
+				<a href="../pages/article-2.html">
+					<li class="cardlink">
+						<div class="cardlink-item1">
+							<h2>02</h2>
+						</div>
+						<div class="cardlink-item2">
+							<h2>Gradients</h2>
+						</div>
+						<div>
+							<p>Daisy</p>
+						</div>
+					</li>
+				</a>
 
-			 <li class="card-3">
-					<a href="article-3.html"></a>
-					<div class="card-content">
-						<h2>Third article</h2>
-						<p class="author">Third article</p>
-					</div>
-				</li>
+
+				<a href="../pages/article-3.html">
+					<li class="cardlink">
+						<div class="cardlink-item1">
+							<h2>03</h2>
+						</div>
+						<div class="cardlink-item2">
+							<h2>Words as Material</h2>
+						</div>
+						<div>
+							<p>Nicole Fenton</p>
+						</div>
+					</li>
+				</a>
 			</ol>
 		</section> 
-		</main>
+		
+		<section>
+			<h3> Colophon</h3>
+			<p> adfjasafkasdjkfafaskv askjdfadsf </p>
+		</section>
 
 		<footer>
 			<p>Designed by Vee Mai</p>
@@ -102,15 +92,3 @@
 	</body>
 </html>	
 
-
-<!-- history -->
-<!-- <div class="dropdown">
-					<!-- <input type="checkbox" id="dropdown-check">
-					<label class="dropdown-button" for="dropdown-check">Chapters</label>
-					<div class="dropdown-content>"> -->
-						<!-- <a href="article-1.html" >Hooked on a Feeling</a>
-						<a href="article-2.html" >This is AUTO-TUNE Typography</a>
-						<a href="article-3.html" >Hooked on a Feeling</a>
-					</div>
-				</div> -->
-			<!-- </div> --> -->
