added css to article 03

--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -2,33 +2,144 @@
 <html>
 	<head>
 		<title>Project1:Manuscript</title>
+		<meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="reset.css" rel="stylesheet">
-		<link href="Stylesheets/article-2.css" rel="Stylesheet">
+		<link href="Stylesheets/article-3.css" rel="Stylesheet">
+		<link rel="Stylesheet" href="../Stylesheets/article-3.css">
 	</head>
 
 <body>
 	<header>
 		<nav class="nav">
-			<span class="class-name"><a href="top">PMCD 5002</a></span>
+			<span class="class-name">PMCD 5002</span>
 			<span class="project">Project 3</span>
 			<span class="my-name">Vee Mai</span>
 		</nav>
+
+
+		<h1>Words as <span class="heading-art">Materials</span>
+		</h1>
+
+		<p><span id="autho"> Written by: Nicole Fenton</span></p>
 	</header>
-	
-	<main class="grid">
-		<div class="padding flex">
-			<h1 id="top"> Binding</h1>
-				<div class="space"></div>
-				<div class="max-width">
-					<h3 class="padding-intro">About this project</h3>
-					<p class="intro"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				</div>
+
+		<div class="subtext">
+			I gave this talk at RISD in Providence and UXLx in Lisbon. Thanks to Tim Maly and Bruno Figueiredo for inviting me to speak, and to Allen Tan, Tina Lee, and Max Fenton for their thoughtful feedback on drafts.	
 		</div>
+	
+
+	<main>
+
+		<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
+
+		<p>“If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”</p>
+
+		<p>Thich Nhat Hanh calls this concept interbeing. He goes on to say that the sun is also in the sheet of paper; and the lumberjack who cut down the tree; and his parents; and the wheat that made his morning bread; and so on. All of these things make it possible for the paper to exist.</p>
+
+		<p>I bring up this story, because it helped me understand systems at a deeper level. I’ve been thinking a lot about what it takes to make a design project successful and even possible in the first place. I have a few hunches and I believe words play an important part in the process. But before I get to that, let’s look at how the paper metaphor relates to us as designers.</p>
+
+		<div class="sticky-header">
+			<h2>How Design works </h2>
+		</div>
+
+		<p>Our work depends on many things: time, money, technology, materials, constraints, and most importantly, the lives, attention, and experiences of other people. We participate in and often orchestrate a process that’s bigger than we are. Design requires collaborators, contributors, customers, toolmakers, factory workers, marketers, postal workers, call center agents, you name it. If we look closely, we can see that people are at the heart of everything we make.
+		</p>
+
+		<p>When I started writing this talk, I asked my designer friends on Twitter to answer this question: What’s the number one thing that sabotages projects for you? Here are a few of their answers:</p>
+
+		<p>Ian Marquette (@ianmarquette):</p>
+
+		<p>a lack of clear understanding between myself and clients, which basically comes down to communication.</p>
+
+		<p>Mark Forscher (@garbnzgh):</p>
+		<p>difference in expectations / poor communication</p>
+
+		<p>Zak Greene (@zearl):</p>
+
+		<p>feedback from 18794387294 different people
+		</p>
+
+		<p>Matt Felten (@mattfelten):</p>
+		<p>Miscommunication. Handoffs to silos. Whatever the opposite of collaboration is.</p>
+
+		<p>Jonathan Myers (@jnthnmyrs):</p>
+		<p>lack of extroverted thinking. One step at a time.</p>
+
+		<p>Davin Risk (@davin):</p>
+		<p>Same as life really… lack of clarity around intent.</p>
+
+		<p>These problems boil down to one thing: communication. Sharing ideas with other people. Working through decisions together to make something new. We’re here to make meaningful changes in the world, but we can’t do that if we don’t understand each other. We can’t ignore people or work around them.</p>
+		
+		<p>If we want design to communicate, we need to communicate in the design process.</p>
+
+		<h2>How communication works</h2>
+
+		<p>So I’ve been thinking about what communication looks like in the design process. Here’s my take:</p>
+
+		<ol>
+			<li>
+				<p>Self</p>
+				<p>Team</p>
+				<p>Product</p>
+				<p>Public</p>
+			</li>
+		</ol>
+
+		<p><strong>Self:</strong> We start by thinking alone. We may be collaborating with friends or colleagues, but we still need space to make sense of what we’re making. We have to put it into terms we can relate to.</p>
+
+		<p><strong>Team:</strong> We also have to talk through it with our team. That’s where extroverted thinking comes in. We may need to sketch, or brainstorm ideas, or summarize what we’ve heard from interviews or user research. We have to get on the same page or find a shared language. Once we have a sense of what we’re doing, we can express those goals as requirements, come up with an approach, and move forward. All of these messy conversations help us gather consensus and work through the details.</p>
+
+		<p><strong>Product:</strong>  After choosing a design direction, we can prototype it, refine it, and try to make it speak for itself. The product needs to reflect the goals and intent we set out to achieve—and in some ways, it needs to stand on its own.</p>
+
+		<p><strong>Public</strong>Once we’re clear on what we’re making, we build it. And if we’re lucky, we get to announce it and share it with the world.</p>
+
+		<p>As we move through each of these steps, the idea starts to solidify and become visible to people around us. This is why I think of design as a process of articulation. We join together to express an idea in a coherent form. We bring ideas to life. We connect the dots or build bridges for our users. That often means being specific about what a product does, who it’s for, why it matters, and how it works. We have to trek through a pile of ambiguity to do this.</p>
+
+		<h2>How writing fits in</h2>
+
+		<p>This outward arc or continuum is the same one that I go through as a writer. I think and sketch and jot down notes; I question my assumptions; I struggle to understand. Later, when I have a sense of what I need to do, I share drafts and take in feedback; I try different variations and keep refining the work until it’s ready for the public.</p>
+
+		<p>I work on digital products and physical goods, so I’m deeply involved in the design process. But I also want to call out early that my process is the design process. I don’t write fiction or short stories; I use language to solve problems—whether that’s behind the scenes or in the product itself. I use words as material.</p>
+
+		<p>Earlier this year, Matt Jones gave a talk at Interaction15 about his experience running BERG and directing interaction design at Google’s Creative Lab. He said:</p>
+
+		<blockquote class="quotes">
+			<p><q>
+				“[Writers] are the fastest designers in the world. They’re amazing at boiling down incredibly abstract concepts into tiny packets of cognition, or language.”
+			</p>
+		</blockquote>
+
+		<p>Going back to Thich Nhat Hanh, I believe that writing is part of every design. If you can clearly define what you’re making and articulate its value, the steps to bring it out into the world will go much faster. It’s easy to put pixels together when you’ve already made decisions. And since we work across systems and borders, there’s no better way to articulate design than with writing.</p>
+
+		<h2>The gap between us</h2>
+
+		<p>I want to focus on writing today, because I’ve noticed a huge gap between writers and designers in the professional world. And I think it contributes to the larger communication problems we face. We’re often on separate teams in separate buildings. We have the same goals and audiences, but we’re rarely seen as partners or equals.</p>
+
+		<p>I first noticed this gap 10 years ago when I was working at Apple, and I’ve seen it again and again since. Designers are invited to product meetings; writers hear about them afterwards. Designers sit close to the CEO; writers are in the call center or brought in right before the launch. Designers make things; writers support them. You can probably trace this separation back to how we’re taught in grade school or high school. In the U.S. at least, we learn to write in English class, to draw in art class, and to understand shapes and numbers in math class. But I’ve realized this intentional separation weakens our work and limits the contributions we can make to the world.</p>
+
+		<p>When I’m on a team, I always try to sit with the designers and engineers—whether in person or on IRC. But most product teams don’t even have a writer. And unfortunately, I don’t think I can solve this particular problem myself. So instead of trying to restructure every product team out there, I’ve been thinking about how you can use words as material in your own design practice.
+		</p>
+
+		<p>These are some of the questions that have come up for me along the way:</p>
+
+		
+
+
+
+
+						
 	</main>
 
 
 	<footer>
-		<p>Designed by Vee Mai</p>
+		<div class="bottom-nav">
+			<ul>	
+				<li class="project">Article 01</li>
+				<li class="project">Article 02</li>
+				<li class="project">Article 03</li>
+			</ul>
+		</div>
 	</footer>
 </body>
-</html> -->
+</html>
