--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav> 
 			<div class="left-nav">
-				<a href="index.html">Home</a>
+				<a href="../index.html">Home</a>
 			</div>
 
 			<ul class="right-nav"> 
