--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Article-2</title>
-		<link href="reset.css" rel="stylesheet">
-		<link href="Stylesheets/article-2.css" rel="Stylesheet">
+		<link href="../reset.css" rel="stylesheet">
+		<link href="../Stylesheets/article-2.css" rel="Stylesheet">
 		<link rel="stylesheet" href="../Stylesheets/article-2.css">
 
 	</head>
@@ -17,9 +17,9 @@
 			<ul class="right-nav"> 
 				<li>Readings list
 					<ul>
-						<li><a href="../pages/article-1.html" >Article 01</a></li>
-						<li><a href="../pages/article-2.html" >Article 02</a></li>
-						<li><a href="../pages/article-3.html" >Article 03</a></li>
+						<li><a href="pages/article-1.html" >Article 01</a></li>
+						<li><a href="pages/article-2.html" >Article 02</a></li>
+						<li><a href="pages/article-3.html" >Article 03</a></li>
 					</ul>
 				</li>
 			</ul> 
