attempting to fix link problem

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			<ul class="right-nav"> 
 				<li>Readings list
 					<ul>
-						<li><a href="pages/article-1.html" >Article 01</a></li>
-						<li><a href="pages/article-2.html" >Article 02</a></li>
-						<li><a href="pages/article-3.html" >Article 03</a></li>
+						<li><a href="../Pages/article-1.html" >Article 01</a></li>
+						<li><a href="../Binding/Pages/article-2.html" >Article 02</a></li>
+						<li><a href="Pages/article-3.html" >Article 03</a></li>
 					</ul>
 				</li>
 			</ul> 
