added table of content

--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -34,6 +34,17 @@
 		</header>
 		
 		<article>
+			<aside>
+				<details>
+					<summary> Table of Contents</summary>
+					<ul>
+						<li>Section 01</li>
+					</ul>
+					<ul>
+						<li>Section 01</li>
+					</ul>
+				</details>
+			</aside>
 			<section>
 				<p class="W"> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
 			</p> 
