Fixed linking issue

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<main>
 		<section>
 			<ol class="cardlink-container">
-				<a href="../pages/article-1.html"> 
+				<a href="Pages/article-1.html"> 
 					<li class="cardlink">
 						<div class="cardlink-item1">
 							<h2>01</h2>
@@ -60,7 +60,7 @@
 					</li>
 				</a>
 
-				<a href="../pages/article-2.html">
+				<a href="Pages/article-2.html">
 					<li class="cardlink">
 						<div class="cardlink-item1">
 							<h2>02</h2>
@@ -75,7 +75,7 @@
 				</a>
 
 
-				<a href="../pages/article-3.html">
+				<a href="Pages/article-3.html">
 					<li class="cardlink">
 						<div class="cardlink-item1">
 							<h2>03</h2>
