--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<ul class="right-nav"> 
 				<li>Readings list
 					<ul>
-						<li><a href="../Pages/article-1.html" >Article 01</a></li>
-						<li><a href="../Binding/Pages/article-2.html" >Article 02</a></li>
+						<li><a href="Pages/article-1.html" >Article 01</a></li>
+						<li><a href="Pages/article-2.html" >Article 02</a></li>
 						<li><a href="Pages/article-3.html" >Article 03</a></li>
 					</ul>
 				</li>
@@ -30,21 +30,13 @@
 
 		<header>
 			<h1>Binding</h1>
-			<!-- <div class="project-title">
-				<span class="key">B</span>
-				<span class="key">I</span>
-				<span class="key">N</span>
-				<span class="key">D</span>
-				<span class="key">I</span>
-				<span class="key">N</span>
-				<span class="key">G</span>
-			</div> -->
 
-			<p class="intro intro-animation"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
+			<p class="intro"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
 		</header>
 		
 		<main>
 		<section>
+			<h2>Explore these articles below! </h2>
 			<ol class="cardlink-container">
 				<a href="Pages/article-1.html"> 
 					<li class="cardlink">
