aligning article with author in landing page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<h2>Hooked on a Feeling</h2>
 						</div>
 						<div>
-							<p>Michael Rock</p>
+							<h2 class="author">Michael Rock</h2>
 						</div>
 					</li>
 				</a>
@@ -61,7 +61,7 @@
 							<h2>Gradients</h2>
 						</div>
 						<div>
-							<p>Daisy</p>
+							<h2 class="author"> Daisy</h2>
 						</div>
 					</li>
 				</a>
